responsive with flexbox - mola!

--- a/flex-box/style.css
+++ b/flex-box/style.css
@@ -35,7 +35,7 @@ body {
     display: flex;
     width:120px;
     height:120px;
-    background: #fa6500;
+    background: #81961a;
     margin:5px;
     border-radius: 10%;
     align-items: center;
