--- a/flex-box/style.css
+++ b/flex-box/style.css
@@ -5,6 +5,8 @@ html{
 body {
     background: #445566;
     font-size: 15px;
+    color: antiquewhite;
+
 }
 .container{
     background: #bbb9a9;
@@ -68,7 +70,45 @@ body {
     background: #fa6500;
     color: #445566;
 }
+.box2{
+    background:  #445566;
+    padding: 20px;
+    padding-bottom: 10px;
+    outline: 2px dashed antiquewhite;
+    outline-offset: -12px;
+}
+.box2 p{
+    margin: 0;
+    line-height:1.3;
+}
+.name{
+    padding: 20px;
+}
+.name h1, h3 {
+    margin: 0;
+}
+.box2:after{
+    content: "♥";
+    background:red;
+    position: relative;
+    width: 120px;
+    height:120px;
+    z-index: -1;
+}
+ul li{
+    list-style: none;
+    text-align: center;
 
+}
+@media only screen and (max-width: 800px){
+    .sections{
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    .section1, .section2, .section3{
+        width: 100%;
+    }
+}
 @media only screen and (max-width: 500px){
     .sections{
         flex-wrap: wrap;
